tutify/src/components/style.css
.class11{

  background-color: #2fb62f;
  
}
.class2{
	background-color: #2fb62f !important;
}

.paper{
	margin-top: 65px;
    margin-left: 80px;
    margin-right: 80px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color:white;
    padding:15px;
}

.form {
    width: '100%';
    margin-top: 24px;
  }

.class222 {
  color: red;
  background-color: blue;
 }

 .submit {
    margin-top: 3,
  }


body {
      background-color: white !important;
}

.MuiSelect-select{
  min-width: 333px !important;
}
  

